@@ -28,6 +28,8 @@
 	* Add #891 remove torrents by pressing the Delete key
 	* Fix issue where stoping a daemon that you aren't connected to causes the
 	  gtkui to shutdown the currently connected daemon.
+	* Fix #594 tray password dialog freeze in Windows
+	* Made the password dialog prettier
 
 ==== Console ====
 	* Fix using the console in Windows, but only in command-line mode
